--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="navbar-collapse collapse" id="collapsingNavbar">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="https://discord.gg/VgAQTWd">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">About</a>
@@ -55,7 +55,7 @@
           <p>Teamsearch.tk is a project looking to help Gamers find more friends to play their favorite games with, while also being easy, and commitment. That means no signups, or long waits.</p>
           <div id="bodyTopButtons">
             <a class="btn" href="#" role="button">More...</a>
-            <a class="btn" href="#" role="button">Discord</a>
+            <a class="btn" href="https://discord.gg/VgAQTWd" role="button">Discord</a>
           </div>
         </div>
       </div><!--bodyTop end-->
@@ -80,6 +80,19 @@
             <a href="https://guide.duo.com/iphone" target="_blank"></a>
           </div>
         </div><!--gameChats end-->
+        
+        <!--otherChats start-->
+        <div class="titleWrapper">
+          <h3>Other Chats</h3>
+        </div>
+        <div id="otherChats" class="flexWrap">
+          <div id="generalBox" class="center flex-padding gameBox">
+            <a href="https://guide.duo.com/iphone" target="_blank"></a>
+          </div>
+          <div id="rolePlayBox" class="center flex-padding gameBox">
+            <a href="https://guide.duo.com/iphone" target="_blank"></a>
+          </div>
+        </div><!--otherChats end-->
       </div><!--bodyBottom end-->
 		</section><!--bodyContainer end-->
     
@@ -89,7 +102,7 @@
         <div class="container text-center">
           <div class="social">
             <a target="_blank" href="https://discord.gg/VgAQTWd"><img class="footerIcon" src="/assets/images/base/footerDiscord.svg" alt="Link to Teamsearch.tk Discord"/></a>
-            <a target="_blank" href="https://github.com/nodegg"><img class="footerIcon" src="/assets/images/base/footerGithub.svg" alt="Link to Teamsearch Github"/></a>
+            <a target="_blank" href="https://github.com/mbektic/TeamSearch"><img class="footerIcon" src="/assets/images/base/footerGithub.svg" alt="Link to Teamsearch Github"/></a>
           </div>
         </div>
       </footer>
