--- a/pages/base/base.html
+++ b/pages/base/base.html
@@ -56,7 +56,7 @@
         <div class="container text-center">
           <div class="social">
             <a target="_blank" href="https://discord.gg/VgAQTWd"><img class="footerIcon" src="/assets/images/base/footerDiscord.svg" alt="Link to Teamsearch.tk Discord"/></a>
-            <a target="_blank" href="https://github.com/nodegg"><img class="footerIcon" src="/assets/images/base/footerGithub.svg" alt="Link to Teamsearch Github"/></a>
+            <a target="_blank" href="https://github.com/mbektic/TeamSearch"><img class="footerIcon" src="/assets/images/base/footerGithub.svg" alt="Link to Teamsearch Github"/></a>
           </div>
         </div>
       </footer>
