Update Last on Surface
I did somehting here, I dont remeber lol

--- a/index.html
+++ b/index.html
@@ -19,30 +19,28 @@
 		<!--Navbar start-->
     <section>
       <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand abs" href="#">TeamSearch</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        
-        <div class="navbar-collapse collapse" id="collapsingNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="https://discord.gg/VgAQTWd">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#myAlert" data-toggle="collapse">Chats</a>
-            </li>
-          </ul>
-          
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="" data-target="#myModal" data-toggle="modal">Terms Of Service</a>
-            </li>
-          </ul>
-        </div>
+          <a class="navbar-brand abs" href="#">TeamSearch</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="navbar-collapse collapse" id="collapsingNavbar">
+              <ul class="navbar-nav">
+                  <li class="nav-item active">
+                      <a class="nav-link" href="/index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="/pages/about/">About</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#bodyBottom">Chat List</a>
+                  </li>
+              </ul>
+              <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                      <a class="nav-link" href="/pages/tos/">Terms of Service</a>
+                  </li>
+              </ul>
+          </div>
       </nav>
     </section><!--Navbar end-->
 		
