Final touches to homepage per lea

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <!--bodyTop start-->
 			<div id="bodyTop">
         <div id="bodyTopContent">
-          <h1>Welcome to<br><strong id="bodyTopTitle">Teamsearch</strong></h1>
-          <p>Teamsearch.tk is a project looking to help Gamers find more friends to play their favorite games with, while also being easy, and commitment. That means no signups, or long waits.</p>
+          <h1>Welcome to <strong>TEAMSEARCH</strong></h1>
+          <p>Teamsearch.tk is a project looking to help Gamers find more friends to play their favorite games with, while also being easy, and commitment. That means no signups, or long waits. We hope to see you stick around so we can grow, and prosper together.</p>
           <div id="bodyTopButtons">
             <a class="btn" href="#" role="button">More...</a>
             <a class="btn" href="https://discord.gg/VgAQTWd" role="button">Discord</a>
@@ -61,7 +61,7 @@
       <!--bodyBottom start-->
       <div id="bodyBottom">
         <div class="titleWrapper">
-          <h3>Game Chats</h3>
+          <h3><strong>Game Chats</strong></h3>
         </div>
         <!--gameChats start-->
         <div id="gameChats" class="flexWrap">
@@ -81,7 +81,7 @@
         
         <!--otherChats start-->
         <div class="titleWrapper">
-          <h3>Other Chats</h3>
+          <h3><strong>Other Chats</strong></h3>
         </div>
         <div id="otherChats" class="flexWrap">
           <div id="generalBox" class="center flex-padding gameBox">
