--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
 		<!--Stylesheets-->
-		<link rel="stylesheet" href="/testing/assets/css/baseStyle.css">
-    <link rel="stylesheet" href="/testing/assets/css/homeStyle.css">
+		<link rel="stylesheet" href="/assets/css/baseStyle.css">
+    <link rel="stylesheet" href="/assets/css/homeStyle.css">
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
@@ -66,7 +66,7 @@
         <!--gameChats start-->
         <div id="gameChats" class="flexWrap">
           <div id="csgoBox" class="center flex-padding gameBox">
-            <a href="https://guide.duo.com/iphone" target="_blank"></a>
+            <a href="http://teamsearch.tk/pages/chatCSGO/index.php" target="_blank"></a>
           </div>
           <div id="lolBox" class="center flex-padding gameBox">
             <a href="https://guide.duo.com/iphone" target="_blank"></a>
