--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
         <!--gameChats start-->
         <div id="gameChats" class="flexWrap">
           <div id="csgoBox" class="center flex-padding gameBox">
-            <a href="http://teamsearch.tk/pages/chatCSGO/index.php" target="_blank"></a>
+            <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
           </div>
           <div id="lolBox" class="center flex-padding gameBox">
-            <a href="https://guide.duo.com/iphone" target="_blank"></a>
+            <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
           </div>
           <div id="pubgBox" class="center flex-padding gameBox">
-            <a href="https://guide.duo.com/iphone" target="_blank"></a>
+            <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
           </div>
           <div id="fortniteBox" class="center flex-padding gameBox">
-            <a href="https://guide.duo.com/iphone" target="_blank"></a>
+            <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
           </div>
         </div><!--gameChats end-->
         
@@ -85,10 +85,10 @@
         </div>
         <div id="otherChats" class="flexWrap">
           <div id="generalBox" class="center flex-padding gameBox">
-            <a href="https://guide.duo.com/iphone" target="_blank"></a>
+            <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
           </div>
           <div id="rolePlayBox" class="center flex-padding gameBox">
-            <a href="https://guide.duo.com/iphone" target="_blank"></a>
+            <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
           </div>
         </div><!--otherChats end-->
       </div><!--bodyBottom end-->
