--- a/pages/baseChat/otherChats.html
+++ b/pages/baseChat/otherChats.html
@@ -70,7 +70,7 @@
 <!--gameChats start-->
 <div id="gameChats">
   <div id="csgoBox" class="gameBox">
-    <a href="http://teamsearch.tk/pages/chatCSGO/index.php" target="_blank"></a>
+    <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
   </div>
   <div id="lolBox" class="gameBox">
     <a href="https://guide.duo.com/iphone" target="_blank"></a>
