--- a/pages/baseChat/otherChats.html
+++ b/pages/baseChat/otherChats.html
@@ -73,13 +73,13 @@
     <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
   </div>
   <div id="lolBox" class="gameBox">
-    <a href="https://guide.duo.com/iphone" target="_blank"></a>
+    <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
   </div>
   <div id="pubgBox" class="gameBox">
-    <a href="https://guide.duo.com/iphone" target="_blank"></a>
+    <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
   </div>
   <div id="fortniteBox" class="gameBox">
-    <a href="https://guide.duo.com/iphone" target="_blank"></a>
+    <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
   </div>
 </div><!--gameChats end-->
 
@@ -88,17 +88,17 @@
 
 <div id="otherChats">
   <div id="generalBox" class="gameBox">
-    <a href="https://guide.duo.com/iphone" target="_blank"></a>
+    <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
   </div>
   <div id="rolePlayBox" class="gameBox">
-    <a href="https://guide.duo.com/iphone" target="_blank"></a>
+    <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
   </div>
 </div><!--otherChats end-->
 
 <div id="" class="gameBox" style="box-shadow: none">
-  <a href="https://guide.duo.com/iphone" target="_blank"></a>
+  <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
 </div>
 
 <div id="" class="gameBox" style="box-shadow: none">
-  <a href="https://guide.duo.com/iphone" target="_blank"></a>
+  <a href="http://teamsearch.tk/testing/pages/baseChat/index.php" target="_blank"></a>
 </div>
